# course-project

./: .gitignore  README.md  flash-commands.txt
input-system/: CMakeLists.txt  sdkconfig  sdkconfig.old
input-system/blink/: sdkconfig
input-system/main/: 2d-pos-encoder.c  2d-pos-encoder.h  CMakeLists.txt  data-sender.c  data-sender.h  double-angles-reader.c  double-angles-reader.h  force-reader.c  force-reader.h  input-main.c  magnetic_encoder_test.c  main.c  packet.h  tcp_client.c  tcp_client.h  wifi_sta.c  wifi_sta.h
output-system/: CMakeLists.txt  sdkconfig
output-system/main/: CMakeLists.txt  actuator_math.c  actuator_math.h  force-reader.c  force-reader.h  main.c  output-main.c  packet.h  tcp_server.c  tcp_server.h  wifi_ap.c  wifi_ap.h
